# chordDL

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  splash.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  database.rs  error.rs  events.rs  lib.rs  logger.rs  main.rs  state.rs
src-tauri/src/dependencies/: archive.rs  fetch.rs  mod.rs  paths.rs  setup.rs
src-tauri/src/downloader/: args.rs  cleanup.rs  cookies.rs  init.rs  mod.rs  ytdlp.rs
src/components/: confirm.html  main_content.html  settings.html  setup.html
src/css/: animations.css  base.css  fonts.css  layout.css  utilities.css  variables.css
src/css/components/: buttons.css  custom-select.css  forms.css  modals.css  progress.css  queue.css  toasts.css
src/js/: actions.ts  config.ts  downloader.ts  events.ts  types.ts  ui.ts  utils.ts
src/js/ui/: CustomSelect.ts  controls.ts  elements.ts  modals.ts  queue.ts  terminal.ts  views.ts
src/js/utils/: errorHandler.ts
