[package]
name = "chord"
version = "0.1.0"
description = "YouTube Music Downloader"
authors = ["eshdev21"]
edition = "2021"

[lib]
name = "chord_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
zip = "2.2"
tar = "0.4.44"
xz2 = "0.1.7"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "2.0.18"
chrono = "0.4.39"
url = "2"
sysinfo = "0.33"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
